@@ -24,17 +24,17 @@
 #define MODVERSIONS
 #include <linux/modversions.h>
 #endif
+#include <config.h>
+#ifndef HAVE_I_SIZE_FUNC
+#define i_size_read(inode) ((inode)->i_size)
+#define i_size_write(inode, size) do { (inode)->i_size = size; } while(0)
+#endif
 #endif 
 #include <linux/kernel.h>
 #include <linux/module.h>
 #include <linux/fs.h>
 #include <linux/list.h>
 #include <linux/spinlock.h>
-
-#ifndef KERNEL_2_6
-#define i_size_read(inode) ((inode)->i_size)
-#define i_size_write(inode, size) do { (inode)->i_size = size; } while(0)
-#endif
 
 /** Read combining parameters */
 #define FUSE_BLOCK_SHIFT 16
