@@ -1,3 +1,8 @@
+2004-02-10  Miklos Szeredi <mszeredi@inf.bme.hu>
+
+	* Added check for i_size_read/write functions to configure.in
+	(patch by Valient Gough)
+
 2004-02-06  Miklos Szeredi <mszeredi@inf.bme.hu>
 
 	* Fixed writing >= 2G files
